--- a/deno.jsonc
+++ b/deno.jsonc
@@ -38,6 +38,13 @@
     "@fathym/ioc": "jsr:@fathym/ioc@0.0.14",
 
     "@o-industrial/common": "jsr:@o-industrial/common@0.0.473-integration",
+    "@o-industrial/atomic/atoms": "../open-industrial-atomic/src/atoms/.exports.ts",
+    "@o-industrial/atomic/icons": "../open-industrial-atomic/build/iconset/icons/.exports.ts",
+    "@o-industrial/atomic/molecules": "../open-industrial-atomic/src/molecules/.exports.ts",
+    "@o-industrial/atomic/organisms": "../open-industrial-atomic/src/organisms/.exports.ts",
+    "@o-industrial/atomic/templates": "../open-industrial-atomic/src/templates/.exports.ts",
+    "@o-industrial/atomic/tailwind/preset": "../open-industrial-atomic/configs/tailwind/preset.ts",
+    "@o-industrial/atomic/utils": "../open-industrial-atomic/src/utils/.exports.ts",
 
     "@nats": "npm:nats@2.29.3",
     "preact": "npm:preact@10.20.1",
