--- a/deno.jsonc
+++ b/deno.jsonc
@@ -35,9 +35,9 @@
 
     "@fathym/eac-deno-kv": "jsr:@fathym/eac-deno-kv@0.0.25",
     "@fathym/eac-iot": "jsr:@fathym/eac-iot@0.0.27",
-    "@fathym/ioc": "jsr:@fathym/ioc@0.0.14",
+    "@fathym/ioc": "jsr:@fathym/ioc@0.0.15",
 
-    "@o-industrial/common": "jsr:@o-industrial/common@0.0.475-integration",
+    "@o-industrial/common": "jsr:@o-industrial/common@0.0.477",
     // "@o-industrial/common/runtimes": "../open-industrial-reference-architecture/src/runtimes/.exports.ts",
     
     "@nats": "npm:nats@2.29.3",
